tests/invalid/Byte_Invalid_1.whiley
public export method test() :
    byte b = 0b00000001
    int i = b * 2
    assert i != 0
